# alberto

./: .editorconfig  .gitignore  0_context.md  CLAUDE.md  CMakeLists.txt  EXCITE_Dynamics.py  EXCITE_Fsw.py  EXCITE_Plotting.py  LICENSE  README.md  pyproject.toml  questAttDet.c  requirements-dev.txt  requirements.txt  run_tracked_simulation.py  test_incremental.py
docs/: SIMULATION_SYSTEM_GUIDE.md  SMEKF_Code.txt  refactoring_plan.md
docs/reports/: TESTING_REPORT.md
excite/: __init__.py  __main__.py
excite/config/: __init__.py  actuators.py  constants.py  control.py  environment.py  mission.py  sensors.py  spacecraft.py
excite/dynamics/: spacecraft_model.py
excite/fsw/: fsw_model.py
excite/scenario/: scenario.py
excite/utilities/: __init__.py
excite/utils/: execution_logger.py
excite_c_modules/: CMakeLists.txt
excite_c_modules/src/: questAttDet.c
modules/: SMEKF.c
old_codes/: EXCITE_Dynamics.py  EXCITE_Fsw.py  EXCITE_Plotting.py  EXCITE_scenario.py  SMEKF.c
scripts/: run_simulation.py  run_tracked_simulation.py
simulation/: EXCITE_Dynamics.py  EXCITE_Fsw.py  EXCITE_Plotting.py  EXCITE_scenario.py
tests/: conftest.py  test_incremental.py  test_mission_phases.py  test_simulation.py
