[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake>=3.18"]
build-backend = "setuptools.build_meta"

[project]
name = "excite-aocs"
version = "1.0.0"
description = "EXCITE CubeSat 12U AOCS Simulation using Basilisk"
authors = [{name = "Alberto Bruschi", email = "bruscia95@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.3",
    "basilisk-framework>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950"
]

[project.scripts]
excite-sim = "excite.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["excite*"]
exclude = ["excite_c_modules*"]
